--- a/playLP.ipynb
+++ b/playLP.ipynb
@@ -1,140 +1,159 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true,
-      "mount_file_id": "1g6ihVqrt9VicCZlKZ87INuXXpJQQLQKc",
-      "authorship_tag": "ABX9TyPfLVLO+reMR+anVPyQ5II9",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/eriephil/eriephil.github.io/blob/main/playLP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/eriephil/eriephil.github.io/blob/main/playLP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wrcPp_lUTY9m"
+   },
+   "source": [
+    "/content/drive/MyDrive/vir_env/bin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "6xIXt5IO0vxx"
+   },
+   "source": [
+    "# New Section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
     },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "/content/drive/MyDrive/vir_env/bin"
-      ],
-      "metadata": {
-        "id": "wrcPp_lUTY9m"
-      }
+    "collapsed": true,
+    "id": "UGztNBNivwe3",
+    "jupyter": {
+     "outputs_hidden": true
     },
+    "outputId": "0bdb1e80-b96a-4616-bec0-f5d51ecd43b0"
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
-      "metadata": {
-        "id": "6xIXt5IO0vxx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!apt-get install -y coinor-cbc"
-      ],
-      "metadata": {
-        "id": "UGztNBNivwe3",
-        "collapsed": true,
-        "outputId": "0bdb1e80-b96a-4616-bec0-f5d51ecd43b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree... Done\n",
-            "Reading state information... Done\n",
-            "coinor-cbc is already the newest version (2.10.7+ds1-1).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 1 not upgraded.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pyomo\n",
-        "\n",
-        "import pyomo.environ as pyo\n",
-        "\n",
-        "D = {'Krunchies','Crispies'}\n",
-        "\n",
-        "N = {'Thiamine','Niacin','Calories'}\n",
-        "\n",
-        "h = {'Thiamine': 1, 'Niacin' : 5, 'Calories' : 400}\n",
-        "\n",
-        "c = { 'Krunchies' : 3.8, 'Crispies' : 4.2}\n",
-        "\n",
-        "a = {'Krunchies':{'Thiamine': 0.1, 'Niacin': 1.0, 'Calories': 110 },\\\n",
-        "     'Crispies':{'Thiamine': 0.25,'Niacin': 0.25, 'Calories': 120.0}}\n",
-        "\n",
-        "\n",
-        "\n",
-        "model = pyo.ConcreteModel()\n",
-        "\n",
-        "model.x = pyo.Var(D, within=pyo.NonNegativeReals)\n",
-        "\n",
-        "model.sufficient = pyo.Constraint( N, rule = lambda m,n:\\\n",
-        "                                  sum(a[d][n] * model.x[d]\\\n",
-        "                                  for d in D) >= h[n])\n",
-        "\n",
-        "model.cost = pyo.Objective(expr = sum(c[d]*model.x[d] for d in D),\\\n",
-        "                           sense = pyo.minimize)\n",
-        "\n",
-        "solver = pyomo.opt.SolverFactory ('cbc', executable='cbc')\n",
-        "\n",
-        "results = solver.solve(model)\n",
-        "\n",
-        "for d in D:\n",
-        "  print (d, model.x[d].value)\n",
-        "print ('')\n",
-        "print(\"Objective function (cost): \" + str(model.cost()))"
-      ],
-      "metadata": {
-        "id": "9FoSEPlP8p7y",
-        "collapsed": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "736ec2e4-3e85-49a0-86aa-54938be1889b"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Krunchies 4.4444444\n",
-            "Crispies 2.2222222\n",
-            "\n",
-            "Objective function (cost): 26.22222196\n"
-          ]
-        }
-      ]
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading package lists... Done\n",
+      "Building dependency tree... Done\n",
+      "Reading state information... Done\n",
+      "coinor-cbc is already the newest version (2.10.7+ds1-1).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 1 not upgraded.\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "!apt-get install -y coinor-cbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "9FoSEPlP8p7y",
+    "outputId": "736ec2e4-3e85-49a0-86aa-54938be1889b"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crispies 2.2222222\n",
+      "Krunchies 4.4444444\n",
+      "\n",
+      "Objective function (cost): 26.22222196\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyomo\n",
+    "\n",
+    "import pyomo.environ as pyo\n",
+    "\n",
+    "D = {'Krunchies','Crispies'}\n",
+    "\n",
+    "N = {'Thiamine','Niacin','Calories'}\n",
+    "\n",
+    "h = {'Thiamine': 1, 'Niacin' : 5, 'Calories' : 400}\n",
+    "\n",
+    "c = { 'Krunchies' : 3.8, 'Crispies' : 4.2}\n",
+    "\n",
+    "a = {'Krunchies':{'Thiamine': 0.1, 'Niacin': 1.0, 'Calories': 110 },\\\n",
+    "     'Crispies':{'Thiamine': 0.25,'Niacin': 0.25, 'Calories': 120.0}}\n",
+    "\n",
+    "\n",
+    "\n",
+    "model = pyo.ConcreteModel()\n",
+    "\n",
+    "model.x = pyo.Var(D, within=pyo.NonNegativeReals)\n",
+    "\n",
+    "model.sufficient = pyo.Constraint( N, rule = lambda m,n:\\\n",
+    "                                  sum(a[d][n] * model.x[d]\\\n",
+    "                                  for d in D) >= h[n])\n",
+    "\n",
+    "model.cost = pyo.Objective(expr = sum(c[d]*model.x[d] for d in D),\\\n",
+    "                           sense = pyo.minimize)\n",
+    "\n",
+    "solver = pyomo.opt.SolverFactory ('cbc', executable='cbc')\n",
+    "\n",
+    "results = solver.solve(model)\n",
+    "\n",
+    "for d in D:\n",
+    "  print (d, model.x[d].value)\n",
+    "print ('')\n",
+    "print(\"Objective function (cost): \" + str(model.cost()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPfLVLO+reMR+anVPyQ5II9",
+   "include_colab_link": true,
+   "mount_file_id": "1g6ihVqrt9VicCZlKZ87INuXXpJQQLQKc",
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
