sat jan 24 -- new title

--- a/adocument.adoc
+++ b/adocument.adoc
@@ -1,11 +1,11 @@
 :toc: auto
 :attribute: phil
-:lang: german
+:lang: english
 :text-align: center
 
 
 
-= here is the title
+= here is the NEW  title
 
 == subtitle here
 
